--- a/src/hello.css
+++ b/src/hello.css
@@ -1,3 +1,21 @@
-.firstname {
-    background-color: blue;
+.light {
+    height: 100em;
+    background-color: white;
+    color: black;
+}
+
+.dark {
+    height: 100em;
+    background-color: black;
+    color: white;
+}
+
+.size {
+    margin-left: 5em;
+    font-size: 5em;
+}
+
+.click {
+    margin-left: 35em;
+    font-size: larger;
 }
